--- a/index.html
+++ b/index.html
@@ -7,12 +7,37 @@
     <title>Yong's Portpolio</title>
     <meta name="description" content="프론트엔드 개발자가 되고 싶은 용희의 포트폴리오">
     <meta name="author" content="정용희">
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="images/favicon2.png">
     <script src="https://kit.fontawesome.com/0c34da539c.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
     <!-- css font-family: 'Open Sans', sans-serif; -->
 </head>
 <body>
-    
+    <!-- Navbar -->
+    <nav id="navbar">
+        <div class="navbar__logo">
+            <img class="memoji" src="./images/favicon.png" alt="">
+            <a class="logo" href="#">Yong Hee</a>
+        </div>
+        <ul class="navbar__menu">
+            <li class="navbar__menu__item">Home</li>
+            <li class="navbar__menu__item">About</li>
+            <li class="navbar__menu__item">Skills</li>
+            <li class="navbar__menu__item">My work</li>
+            <li class="navbar__menu__item">Testimonial</li>
+            <li class="navbar__menu__item">Contact</li>
+        </ul>
+    </nav>
+    <!-- About -->
+    <section id="about"></section>
+    <section id="skills"></section>
+    <!-- Skils -->
+    <section id="work"></section>
+    <!-- Testimonials -->
+    <section id="testimonials"></section>
+    <!-- Contact -->
+    <section id="contact"></section>
 </body>
 </html>
