--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <img class="memoji" src="./images/favicon.png" alt="">
+            <img class="memoji" src="./images/yonghee.png" alt="memoji">
             <a class="logo" href="#">Yong Hee</a>
         </div>
         <ul class="navbar__menu">
@@ -30,6 +30,13 @@
             <li class="navbar__menu__item">Contact</li>
         </ul>
     </nav>
+    <!-- Home -->
+    <section class="home">
+        <img src="./images/yonghee.png" alt="Yong's memoji" class="home__avatar">
+        <h1 class="home__title">Hello, <br>I'm Dream Coder</h1>
+        <h2 class="home__description">끊임없이 노력하는 개발자가 되겠습니다.</h2>
+        <button class="home__contact">Contact Me</button>
+    </section>
     <!-- About -->
     <section id="about"></section>
     <section id="skills"></section>
