--- a/index.html
+++ b/index.html
@@ -38,9 +38,36 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about"></section>
-    <section id="skills"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam quidem commodi, neque vitae dignissimos ipsam esse officia expedita voluptas eum maxime voluptate harum aut voluptatibus cumque excepturi pariatur earum deserunt.</p>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__icon"><i class="fa-brands fa-html5"></i></div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
+            </div>
+            <div class="major">
+                <div class="major__icon"><i class="fa-brands fa-html5"></i></div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
+            </div>
+            <div class="major">
+                <div class="major__icon"><i class="fa-brands fa-html5"></i></div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
+            </div>
+        </div>
+        <div class="about__schools">
+            <div class="school">
+                <img src="images/jobs/school1.png" alt="" class="school__logo">
+                <p class="school__name">그린컴퓨터아카데미 UI/UX 디자인 웹 퍼블리셔&개발자 양성과정</p>
+                <p class="period">6개월</p>
+            </div>
+        </div>
+    </section>
     <!-- Skils -->
+    <section id="skills"></section>
     <section id="work"></section>
     <!-- Testimonials -->
     <section id="testimonials"></section>
