--- a/index.html
+++ b/index.html
@@ -64,10 +64,85 @@
                 <p class="school__name">그린컴퓨터아카데미 UI/UX 디자인 웹 퍼블리셔&개발자 양성과정</p>
                 <p class="period">6개월</p>
             </div>
+            <div class="school">
+                <img src="images/jobs/school2.PNG" alt="" class="school__logo">
+                <p class="school__name">노마드코더 바닐라 자바스크립트 </p>
+                <p class="period">1개월</p>
+            </div>
         </div>
     </section>
     <!-- Skils -->
-    <section id="skills"></section>
+    <section id="skills">
+        <h1>Skills</h1>
+        <h2>Skills & Attributes</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat quo libero ab? Distinctio culpa non in nam, magnam minima ducimus eveniet, quaerat harum quas magni vero cum officiis consectetur dolorem!</p>
+        <div class="skillset">
+            <div class="skillset__left">
+                <h3 class="skillset__title">Skills</h3>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>HTML</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>CSS</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>JavaScrpt</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>JQuery</span>
+                            <span>75%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>React</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="skillset__right">
+                <div class="tools">
+                    <h3 class="skillset__title">Tools</h3>
+                    <ul class="tools__list">
+                        <li><span>Visual Studio Code</span></li>
+                        <li><span>atom</span></li>
+                    </ul>
+                </div>
+                <div class="etc">
+                    <h3 class="skillset__title">Etc</h3>
+                    <ul class="etc__list">
+                        <li><span>Git</span></li>
+                        <li><span>Communication</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="work"></section>
     <!-- Testimonials -->
     <section id="testimonials"></section>
