--- a/index.html
+++ b/index.html
@@ -143,7 +143,71 @@
             </div>
         </div>
     </section>
-    <section id="work"></section>
+    <!-- Work -->
+    <section id="work">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">All<span class="category__count">7</span></button>
+            <button class="category__btn">Web Renewal<span class="category__count">2</span></button>
+            <button class="category__btn">Clone coding<span class="category__count">4</span></button>
+            <button class="category__btn">React<span class="category__count"></span>1</button>
+        </div>
+        <div class="work__projects">
+            <a href="http://sdf4542.dothome.co.kr/musinsa_yong/index.html#" class="project" target="blank">
+                <img class="project__img" src="./images/projects/무신사스토어.png" alt="무신사스토어">
+                <div class="project__description">
+                    <h3>Musinsa Site</h3>
+                    <span>무신사스토어 리뉴얼 웹 HTML CSS JQuery</span>
+                </div>
+            </a>
+        </div>
+        <div class="work__projects">
+            <a href="https://jeongyonghee.github.io/yongheeresume/" class="project" target="blank">
+                <img class="project__img" src="./images/projects/레주메.png" alt="레주메사이트">
+                <div class="project__description">
+                    <h3>Resume Site</h3>
+                    <span>레주메사이트 HTML CSS JQuery</span>
+                </div>
+            </a>
+        </div>
+        <div class="work__projects">
+            <a href="https://jeongyonghee.github.io/subway-finish/" class="project" target="blank">
+                <img class="project__img" src="./images/projects/써브웨이.png" alt="써브웨이">
+                <div class="project__description">
+                    <h3>Clone coding</h3>
+                    <span>써브웨이 클론코딩 HTML CSS JQuery</span>
+                </div>
+            </a>
+        </div>
+        <div class="work__projects">
+            <a href="https://jeongyonghee.github.io/lago/" class="project" target="blank">
+                <img class="project__img" src="./images/projects/라구호텔.png" alt="라구호텔">
+                <div class="project__description">
+                    <h3>Clone coding</h3>
+                    <span>라구호텔 클론코딩HTML CSS JQuery</span>
+                </div>
+            </a>
+        </div>
+        <div class="work__projects">
+            <a href="https://jeongyonghee.github.io/coco/#none" class="project" target="blank">
+                <img class="project__img" src="./images/projects/디자인코코.png" alt="디자인코코">
+                <div class="project__description">
+                    <h3>Clone coding</h3>
+                    <span>디자인코코 클론코딩 HTML CSS JQuery</span>
+                </div>
+            </a>
+        </div>
+        <div class="work__projects">
+            <a href="https://jeongyonghee.github.io/fivestoneclone2/" class="project" target="blank">
+                <img class="project__img" src="./images/projects/파이브스톤.png" alt="파이브스톤">
+                <div class="project__description">
+                    <h3>Clone coding</h3>
+                    <span>파이브스톤 클론코딩 HTML CSS JQuery</span>
+                </div>
+            </a>
+        </div>
+    </section>
     <!-- Testimonials -->
     <section id="testimonials"></section>
     <!-- Contact -->
