--- a/index.html
+++ b/index.html
@@ -208,9 +208,16 @@
             </a>
         </div>
     </section>
-    <!-- Testimonials -->
-    <section id="testimonials"></section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">sdf4542@naver.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/jeongyonghee?tab=repositories" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+        </div>
+        <p class="contact__rights">발전하는 사람이 되겠습니다.</p>
+    </section>
 </body>
 </html>
