CSS: Global setup

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="description" content="프론트엔드 개발자가 되고 싶은 용희의 포트폴리오">
     <meta name="author" content="정용희">
     <link rel="icon" type="image/png" href="images/favicon2.png">
-    <script src="https://kit.fontawesome.com/0c34da539c.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
+    <script src="https://kit.fontawesome.com/0c34da539c.js" crossorigin="anonymous"></script>
     <script src="main.js" defer></script>
     <!-- css font-family: 'Open Sans', sans-serif; -->
 </head>
@@ -43,17 +44,17 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam quidem commodi, neque vitae dignissimos ipsam esse officia expedita voluptas eum maxime voluptate harum aut voluptatibus cumque excepturi pariatur earum deserunt.</p>
         <div class="about__majors">
             <div class="major">
-                <div class="major__icon"><i class="fa-brands fa-html5"></i></div>
+                <div class="major__icon"><i class="fab fa-html5"></i></div>
                 <div class="major__title">Front-end</div>
                 <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
             </div>
             <div class="major">
-                <div class="major__icon"><i class="fa-brands fa-html5"></i></div>
+                <div class="major__icon"><i class="fab fa-html5"></i></div>
                 <div class="major__title">Front-end</div>
                 <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
             </div>
             <div class="major">
-                <div class="major__icon"><i class="fa-brands fa-html5"></i></div>
+                <div class="major__icon"><i class="fab fa-html5"></i></div>
                 <div class="major__title">Front-end</div>
                 <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
             </div>
@@ -214,7 +215,7 @@
         <h2 class="contact__email">sdf4542@naver.com</h2>
         <div class="contact__links">
             <a href="https://github.com/jeongyonghee?tab=repositories" target="_blank">
-                <i class="fa-brands fa-github"></i>
+                <i class="fab fa-github"></i>
             </a>
         </div>
         <p class="contact__rights">발전하는 사람이 되겠습니다.</p>
