--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <img class="memoji" src="./images/yonghee.png" alt="memoji">
-            <a class="logo" href="#">Yong Hee</a>
+            <i class="fas fa-frog"></i>
+            <a href="#">Yong</a>
         </div>
         <ul class="navbar__menu">
-            <li class="navbar__menu__item">Home</li>
+            <li class="navbar__menu__item active">Home</li>
             <li class="navbar__menu__item">About</li>
             <li class="navbar__menu__item">Skills</li>
             <li class="navbar__menu__item">My work</li>
