--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
             <li class="navbar__menu__item">About</li>
             <li class="navbar__menu__item">Skills</li>
             <li class="navbar__menu__item">My work</li>
-            <li class="navbar__menu__item">Testimonial</li>
             <li class="navbar__menu__item">Contact</li>
         </ul>
     </nav>
     <!-- Home -->
-    <section class="home">
+    <section id="home">
         <img src="./images/yonghee.png" alt="Yong's memoji" class="home__avatar">
         <h1 class="home__title">Hello, <br>I'm Dream Coder</h1>
         <h2 class="home__description">끊임없이 노력하는 개발자가 되겠습니다.</h2>
