--- a/index.html
+++ b/index.html
@@ -38,41 +38,45 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
         <h1>About me</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam quidem commodi, neque vitae dignissimos ipsam esse officia expedita voluptas eum maxime voluptate harum aut voluptatibus cumque excepturi pariatur earum deserunt.</p>
         <div class="about__majors">
             <div class="major">
                 <div class="major__icon"><i class="fab fa-html5"></i></div>
-                <div class="major__title">Front-end</div>
+                <h2 class="major__title">Front-end</h2>
                 <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
             </div>
             <div class="major">
                 <div class="major__icon"><i class="fab fa-html5"></i></div>
-                <div class="major__title">Front-end</div>
+                <h2 class="major__title">Front-end</h2>
                 <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
             </div>
             <div class="major">
                 <div class="major__icon"><i class="fab fa-html5"></i></div>
-                <div class="major__title">Front-end</div>
+                <h2 class="major__title">Front-end</h2>
                 <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
             </div>
         </div>
         <div class="about__schools">
             <div class="school">
                 <img src="images/jobs/school1.png" alt="" class="school__logo">
-                <p class="school__name">그린컴퓨터아카데미 UI/UX 디자인 웹 퍼블리셔&개발자 양성과정</p>
-                <p class="period">6개월</p>
+                <div class="school__description">
+                    <p class="school__name">그린컴퓨터아카데미 UI/UX 디자인 웹 퍼블리셔&개발자 양성과정</p>
+                    <p class="school__period">6개월</p>
+                </div>
             </div>
             <div class="school">
                 <img src="images/jobs/school2.PNG" alt="" class="school__logo">
-                <p class="school__name">노마드코더 바닐라 자바스크립트 </p>
-                <p class="period">1개월</p>
+                <div class="school__description">
+                    <p class="school__name">노마드코더 바닐라 자바스크립트 </p>
+                    <p class="school__period">1개월</p>
+                </div>
             </div>
         </div>
     </section>
     <!-- Skils -->
-    <section id="skills">
+    <section id="skills" class="section">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat quo libero ab? Distinctio culpa non in nam, magnam minima ducimus eveniet, quaerat harum quas magni vero cum officiis consectetur dolorem!</p>
@@ -144,7 +148,7 @@
         </div>
     </section>
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -209,7 +213,7 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
         <h2 class="contact__email">sdf4542@naver.com</h2>
         <div class="contact__links">
