--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about" class="section">
+    <section id="about" class="section section__container">
         <h1>About me</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam quidem commodi, neque vitae dignissimos ipsam esse officia expedita voluptas eum maxime voluptate harum aut voluptatibus cumque excepturi pariatur earum deserunt.</p>
         <div class="about__majors">
@@ -77,75 +77,77 @@
     </section>
     <!-- Skils -->
     <section id="skills" class="section">
-        <h1>Skills</h1>
-        <h2>Skills & Attributes</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat quo libero ab? Distinctio culpa non in nam, magnam minima ducimus eveniet, quaerat harum quas magni vero cum officiis consectetur dolorem!</p>
-        <div class="skillset">
-            <div class="skillset__left">
-                <h3 class="skillset__title">Skills</h3>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>HTML</span>
-                        <span>80%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill__value"></div>
-                    </div>
+        <div class="section__container">
+            <h1>Skills</h1>
+            <h2>Skills & Attributes</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat quo libero ab? Distinctio culpa non in nam, magnam minima ducimus eveniet, quaerat harum quas magni vero cum officiis consectetur dolorem!</p>
+            <div class="skillset">
+                <div class="skillset__left">
+                    <h3 class="skillset__title">Skills</h3>
                     <div class="skill">
-                        <div class="skill_description">
-                            <span>CSS</span>
+                        <div class="skill__description">
+                            <span>HTML</span>
                             <span>80%</span>
                         </div>
                         <div class="skill__bar">
-                            <div class="skill__value"></div>
+                            <div class="skill__value" style="width:80%";></div>
                         </div>
                     </div>
-                    <div class="skill">
-                        <div class="skill_description">
-                            <span>JavaScrpt</span>
-                            <span>70%</span>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>CSS</span>
+                                <span>80%</span>
+                            </div>
+                            <div class="skill__bar" >
+                                <div class="skill__value" style="width:80%";></div>
+                            </div>
                         </div>
-                        <div class="skill__bar">
-                            <div class="skill__value"></div>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>JavaScrpt</span>
+                                <span>70%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:70%";></div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>JQuery</span>
+                                <span>75%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:75%";></div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill__description">
+                                <span>React</span>
+                                <span>60%</span>
+                            </div>
+                            <div class="skill__bar">
+                                <div class="skill__value" style="width:60%";></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="skill">
-                        <div class="skill_description">
-                            <span>JQuery</span>
-                            <span>75%</span>
-                        </div>
-                        <div class="skill__bar">
-                            <div class="skill__value"></div>
-                        </div>
+                
+                <div class="skillset__right">
+                    <div class="tools">
+                        <h3 class="skillset__title">Tools</h3>
+                        <ul class="tools__list">
+                            <li><span>Visual Studio Code</span></li>
+                        </ul>
                     </div>
-                    <div class="skill">
-                        <div class="skill_description">
-                            <span>React</span>
-                            <span>60%</span>
-                        </div>
-                        <div class="skill__bar">
-                            <div class="skill__value"></div>
-                        </div>
+                    <div class="etc">
+                        <h3 class="skillset__title">Etc</h3>
+                        <ul class="etc__list">
+                            <li><span>Git</span></li>
+                            <li><span>Communication</span></li>
+                        </ul>
                     </div>
                 </div>
+             </div>
             </div>
-            <div class="skillset__right">
-                <div class="tools">
-                    <h3 class="skillset__title">Tools</h3>
-                    <ul class="tools__list">
-                        <li><span>Visual Studio Code</span></li>
-                        <li><span>atom</span></li>
-                    </ul>
-                </div>
-                <div class="etc">
-                    <h3 class="skillset__title">Etc</h3>
-                    <ul class="etc__list">
-                        <li><span>Git</span></li>
-                        <li><span>Communication</span></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
     </section>
     <!-- Work -->
     <section id="work" class="section">
