--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
     </section>
     <!-- Work -->
-    <section id="work" class="section">
+    <section id="work" class="section section__container">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -213,7 +213,7 @@
                 <i class="fab fa-github"></i>
             </a>
         </div>
-        <p class="contact__rights">발전하는 사람이 되겠습니다.</p>
+        <p class="contact__rights">2022 프론트엔드 개발자가 되고 싶은 용희 - all rights reserved</p>
     </section>
 </body>
 </html>
