--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             <li class="navbar__menu__item">My work</li>
             <li class="navbar__menu__item">Contact</li>
         </ul>
+
+        <!-- 토글 버튼 -->
+        <button class="navbar__toggle-btn">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
     <!-- Home -->
     <section id="home">
@@ -38,39 +43,41 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about" class="section section__container">
-        <h1>About me</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam quidem commodi, neque vitae dignissimos ipsam esse officia expedita voluptas eum maxime voluptate harum aut voluptatibus cumque excepturi pariatur earum deserunt.</p>
-        <div class="about__majors">
-            <div class="major">
-                <div class="major__icon"><i class="fab fa-html5"></i></div>
-                <h2 class="major__title">Front-end</h2>
-                <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
-            </div>
-            <div class="major">
-                <div class="major__icon"><i class="fab fa-html5"></i></div>
-                <h2 class="major__title">Front-end</h2>
-                <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
-            </div>
-            <div class="major">
-                <div class="major__icon"><i class="fab fa-html5"></i></div>
-                <h2 class="major__title">Front-end</h2>
-                <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
-            </div>
-        </div>
-        <div class="about__schools">
-            <div class="school">
-                <img src="images/jobs/school1.png" alt="" class="school__logo">
-                <div class="school__description">
-                    <p class="school__name">그린컴퓨터아카데미 UI/UX 디자인 웹 퍼블리셔&개발자 양성과정</p>
-                    <p class="school__period">6개월</p>
+    <section id="about" class="section">
+        <div class="section__container">
+            <h1>About me</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam quidem commodi, neque vitae dignissimos ipsam esse officia expedita voluptas eum maxime voluptate harum aut voluptatibus cumque excepturi pariatur earum deserunt.</p>
+            <div class="about__majors">
+                <div class="major">
+                    <div class="major__icon"><i class="fab fa-html5"></i></div>
+                    <h2 class="major__title">Front-end</h2>
+                    <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
+                </div>
+                <div class="major">
+                    <div class="major__icon"><i class="fab fa-html5"></i></div>
+                    <h2 class="major__title">Front-end</h2>
+                    <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
+                </div>
+                <div class="major">
+                    <div class="major__icon"><i class="fab fa-html5"></i></div>
+                    <h2 class="major__title">Front-end</h2>
+                    <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
                 </div>
             </div>
-            <div class="school">
-                <img src="images/jobs/school2.PNG" alt="" class="school__logo">
-                <div class="school__description">
-                    <p class="school__name">노마드코더 바닐라 자바스크립트 </p>
-                    <p class="school__period">1개월</p>
+            <div class="about__schools">
+                <div class="school">
+                    <img src="images/jobs/school1.png" alt="" class="school__logo">
+                    <div class="school__description">
+                        <p class="school__name">그린컴퓨터아카데미 UI/UX 디자인 웹 퍼블리셔&개발자 양성과정</p>
+                        <p class="school__period">6개월</p>
+                    </div>
+                </div>
+                <div class="school">
+                    <img src="images/jobs/school2.PNG" alt="" class="school__logo">
+                    <div class="school__description">
+                        <p class="school__name">노마드코더 바닐라 자바스크립트 </p>
+                        <p class="school__period">1개월</p>
+                    </div>
                 </div>
             </div>
         </div>
