--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#">Yong</a>
         </div>
         <ul class="navbar__menu">
-            <li class="navbar__menu__item active" data-link="#home">Home</li>
+            <li class="navbar__menu__item" data-link="#home">Home</li>
             <li class="navbar__menu__item" data-link="#about">About</li>
             <li class="navbar__menu__item" data-link="#skills">Skills</li>
             <li class="navbar__menu__item" data-link="#work">My work</li>
@@ -161,7 +161,7 @@
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
-            <button class="category__btn active" data-filter="*">All <span class="category__count">7</span></button>
+            <button class="category__btn selected" data-filter="*">All <span class="category__count">7</span></button>
             <button class="category__btn" data-filter="web-renewal">Web Renewal <span class="category__count">2</span></button>
             <button class="category__btn" data-filter="clone-coding">Clone coding <span class="category__count">4</span></button>
             <button class="category__btn" data-filter="react">React <span class="category__count">1</span></button>
