JS : hamberger + project ui

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
     <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
         <h2 class="contact__email">sdf4542@naver.com</h2>
+        <h2 class="contact__phone">010-4195-3185</h2>
         <div class="contact__links">
             <a href="https://github.com/jeongyonghee?tab=repositories" target="_blank">
                 <i class="fab fa-github"></i>
