--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#">Yong</a>
         </div>
         <ul class="navbar__menu">
-            <li class="navbar__menu__item" data-link="#home">Home</li>
+            <li class="navbar__menu__item active" data-link="#home">Home</li>
             <li class="navbar__menu__item" data-link="#about">About</li>
             <li class="navbar__menu__item" data-link="#skills">Skills</li>
             <li class="navbar__menu__item" data-link="#work">My work</li>
@@ -37,31 +37,33 @@
     </nav>
     <!-- Home -->
     <section id="home">
-        <img src="./images/yonghee.png" alt="Yong's memoji" class="home__avatar">
-        <h1 class="home__title">Hello, <br>I'm Dream Coder</h1>
-        <h2 class="home__description">끊임없이 노력하는 개발자가 되겠습니다.</h2>
-        <button class="home__contact">Contact Me</button>
+        <div class="home__container">
+            <img src="./images/yonghee.png" alt="Yong's memoji" class="home__avatar">
+            <h1 class="home__title">Hello, <br>I'm an Eager Beaver</h1>
+            <h2 class="home__description">끊임없이 노력하는 개발자가 되겠습니다.</h2>
+            <button class="home__contact">Contact Me</button>
+        </div>
     </section>
     <!-- About -->
     <section id="about" class="section">
         <div class="section__container">
             <h1>About me</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam quidem commodi, neque vitae dignissimos ipsam esse officia expedita voluptas eum maxime voluptate harum aut voluptatibus cumque excepturi pariatur earum deserunt.</p>
+            <p>어떤 일을 하던 포기하지 않고 끈기있게 도전하는 것이 가장 큰 장점입니다. <br>심리상담학에서 웹 개발까지 결코 쉽지 않은 도전이었지만 집요하게 파고드는 성격으로 공부중입니다. <br>전공자들에 비해 부족한 것은 사실이나 그들과 저는 쏟은 시간이 다를 뿐 똑같은 시간을 할애한다면 그들보다 앞서나갈 자신이 있습니다.</p>
             <div class="about__majors">
                 <div class="major">
                     <div class="major__icon"><i class="fab fa-html5"></i></div>
-                    <h2 class="major__title">Front-end</h2>
-                    <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
+                    <h2 class="major__title">HTML5</h2>
+                    <div class="major__description">BEM 규칙에 따른 모듈화 한 <br>HTML 작성이 가능합니다</div>
                 </div>
                 <div class="major">
-                    <div class="major__icon"><i class="fab fa-html5"></i></div>
-                    <h2 class="major__title">Front-end</h2>
-                    <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
+                    <div class="major__icon"><i class="fab fa-css3-alt"></i></div>
+                    <h2 class="major__title">CSS</h2>
+                    <div class="major__description">글로벌 셋업을 활용할줄 알며 미디어 쿼리를 사용 <br>반응형 웹페이지를 제작할 수 있습니다.</div>
                 </div>
                 <div class="major">
-                    <div class="major__icon"><i class="fab fa-html5"></i></div>
-                    <h2 class="major__title">Front-end</h2>
-                    <div class="major__description">HTML, CSS, JavaScrpt, JQuery <br> React</div>
+                    <div class="major__icon"><i class="fab fa-js"></i></div>
+                    <h2 class="major__title">JavaScript</h2>
+                    <div class="major__description">ES6+ 문법에 맞게 작성 가능 <br>jQuery 활용 가능 </div>
                 </div>
             </div>
             <div class="about__schools">
@@ -86,10 +88,9 @@
     <section id="skills" class="section">
         <div class="section__container">
             <h1>Skills</h1>
-            <h2>Skills & Attributes</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat quo libero ab? Distinctio culpa non in nam, magnam minima ducimus eveniet, quaerat harum quas magni vero cum officiis consectetur dolorem!</p>
+            <p>부족한 부분이 많지만 점차 채워나가는 모습을 보여드리겠습니다.</p>
             <div class="skillset">
-                <div class="skillset__left">
+                <div class="skillset__center">
                     <h3 class="skillset__title">Skills</h3>
                     <div class="skill">
                         <div class="skill__description">
@@ -137,22 +138,6 @@
                             </div>
                         </div>
                     </div>
-                
-                <div class="skillset__right">
-                    <div class="tools">
-                        <h3 class="skillset__title">Tools</h3>
-                        <ul class="tools__list">
-                            <li><span>Visual Studio Code</span></li>
-                        </ul>
-                    </div>
-                    <div class="etc">
-                        <h3 class="skillset__title">Etc</h3>
-                        <ul class="etc__list">
-                            <li><span>Git</span></li>
-                            <li><span>Communication</span></li>
-                        </ul>
-                    </div>
-                </div>
              </div>
             </div>
     </section>
@@ -161,13 +146,13 @@
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
-            <button class="category__btn selected" data-filter="*">All <span class="category__count">7</span></button>
+            <button class="category__btn selected" data-filter="*">All <span class="category__count">8</span></button>
             <button class="category__btn" data-filter="web-renewal">Web Renewal <span class="category__count">2</span></button>
             <button class="category__btn" data-filter="clone-coding">Clone coding <span class="category__count">4</span></button>
-            <button class="category__btn" data-filter="react">React <span class="category__count">1</span></button>
+            <button class="category__btn" data-filter="JavaScript">JavaScript <span class="category__count">2</span></button>
         </div>
         <div class="work__project">
-            <a href="http://sdf4542.dothome.co.kr/musinsa_yong/index.html#" class="project"target="blank" data-type="web-renewal">
+            <a href="https://jeongyonghee.github.io/musinsa-re/" class="project"target="blank" data-type="web-renewal">
                 <img class="project__img" src="./images/projects/무신사스토어.png"alt="무신사스토어">
                 <div class="project__description">
                     <h3>Musinsa Site</h3>
@@ -207,6 +192,20 @@
                 <div class="project__description">
                     <h3>Clone coding</h3>
                     <span>파이브스톤 클론코딩 HTML CSS JQuery</span>
+                </div>
+            </a>
+            <a href="https://jeongyonghee.github.io/Carrot-game/" class="project" target="blank" data-type="JavaScript">
+                <img class="project__img" src="./images/projects/파이브스톤.png" alt="당근게임">
+                <div class="project__description">
+                    <h3>JavaScript</h3>
+                    <span>당근게임 JavaScript Es6+</span>
+                </div>
+            </a>
+            <a href="https://jeongyonghee.github.io/Shopping-list/" class="project" target="blank" data-type="JavaScript">
+                <img class="project__img" src="./images/projects/파이브스톤.png" alt="to-do list">
+                <div class="project__description">
+                    <h3>JavaScript</h3>
+                    <span>to-do list JavaScript</span>
                 </div>
             </a>
         </div>
