--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <button class="category__btn selected" data-filter="*">All <span class="category__count">8</span></button>
             <button class="category__btn" data-filter="web-renewal">Web Renewal <span class="category__count">2</span></button>
             <button class="category__btn" data-filter="clone-coding">Clone coding <span class="category__count">4</span></button>
-            <button class="category__btn" data-filter="JavaScript">JavaScript <span class="category__count">2</span></button>
+            <button class="category__btn" data-filter="JavaScript">JavaScript <span class="category__count">3</span></button>
         </div>
         <div class="work__project">
             <a href="https://jeongyonghee.github.io/musinsa-re/" class="project"target="blank" data-type="web-renewal">
@@ -195,14 +195,21 @@
                 </div>
             </a>
             <a href="https://jeongyonghee.github.io/Carrot-game/" class="project" target="blank" data-type="JavaScript">
-                <img class="project__img" src="./images/projects/파이브스톤.png" alt="당근게임">
+                <img class="project__img" src="./images/projects/당근게임.png" alt="당근게임">
                 <div class="project__description">
                     <h3>JavaScript</h3>
                     <span>당근게임 JavaScript Es6+</span>
                 </div>
             </a>
+            <a href="https://jeongyonghee.github.io/TeemoGame/" class="project" target="blank" data-type="JavaScript">
+                <img class="project__img" src="./images/projects/teemogame.PNG" alt="당근게임">
+                <div class="project__description">
+                    <h3>JavaScript</h3>
+                    <span>티모게임 현재 개발진행중 <br>방향키로 티모를 움직이세요</span>
+                </div>
+            </a>
             <a href="https://jeongyonghee.github.io/Shopping-list/" class="project" target="blank" data-type="JavaScript">
-                <img class="project__img" src="./images/projects/파이브스톤.png" alt="to-do list">
+                <img class="project__img" src="./images/projects/쇼핑리스트.png" alt="to-do list">
                 <div class="project__description">
                     <h3>JavaScript</h3>
                     <span>to-do list JavaScript</span>
